# docbuild

./: .buildinfo  .coveragerc  .dockerignore  .editorconfig  .gitignore  .pytest.ini  .ruff.toml  .versions.json  AGENTS.md  CHANGELOG.rst  Dockerfile  GEMINI.md  IDEAS.md  LINKS.md  MANIFEST.in  README.md  SECURITY.md  _docbuild_backend.py  changelog.html  concept.md  env.example.toml  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  towncrier.toml  uv.toml
.github/: dependabot.yml  pull_request_template.yml
_images/: inheritance-0027632140cda0d8e85bfd8aced680604a606d5b.png.map  inheritance-046cdc5c6f2322e4d4cbc90ade96ecbc6f6ec5c1.png.map  inheritance-10c391b48bcd5d9d98709d6922717ecf5c696c4f.png.map  inheritance-17f41f16b64190f2ff46a4c9fd29fcbaef3304a4.png.map  inheritance-1bf5d8cdff19ea129f230860eece865407a504ff.png.map  inheritance-1f2df83fa5adc33bca36808eeda9e63208764049.png.map  inheritance-230702b443e2d5fec4d30daeeaf10febcbb84c55.png.map  inheritance-241839a3755b3e3f96a506f61b985c9e2b33bcf5.png.map  inheritance-27c8bcfaf4f6d9659bd1d08838a39b2c59765806.png.map  inheritance-2a3e66f5e5a519a7509a1e57fdf803972e588ecd.png.map  inheritance-3f314530df3f238eb50766b578d2ceb1659f1e0d.png.map  inheritance-46a6e50c2c763423de92d643322b403c3631ded9.png.map  inheritance-574f5b836b8eb93c36dced857d10d68ee3691ce6.png.map  inheritance-61544eaff4aa672b7fe19db4cdeb32032b07b41c.png.map  inheritance-6504b0fa1609b2470f59e808b7dfbd86baa16944.png.map  inheritance-656eb947dcc122e498b6910d73d5c192cea28330.png.map  inheritance-69d387389b43cfa1cc9b788faed31da6feabcefa.png.map  inheritance-6a0f35c5bfebca4cca9ff8a7b83bedde50bf3c02.png.map  inheritance-751eeaeaecc7ed6877f91edf555b026eb74611e3.png.map  inheritance-7a01ddefbfd269e1741acc6f761bd3f4693c2493.png.map  inheritance-7e46598f52a8ed563422d4a2978950c9292ba5b1.png.map  inheritance-80b96b656cbef8ac14f47ec6edfe6b4b39f6af2b.png.map  inheritance-80cdeee18151a165d580e30fbe365282b1b0bcda.png.map  inheritance-850038250d35f72a846def2559214e20934b9d15.png.map  inheritance-877567bbdb3765a743ce07db84691616c26656c8.png.map  inheritance-90c8889b27a523ce9a50c13e7fe2d1630bcfdd94.png.map  inheritance-945dfdba6375695804018a4c3ea296f7023db31b.png.map  inheritance-9732d2b1fe6afabe0f25388f48a002cad808ce82.png.map  inheritance-9ddb3d28174a38d72968c6d2244222ed4922ef85.png.map  inheritance-9f0d10e524ca1cd0a18274b1d48ff2cb42b7f248.png.map  inheritance-a8e6637fca3bc5034ea782e82ffceb661abce1f5.png.map  inheritance-a91864dd7e93f0067bb2c62504366089bd0f077d.png.map  inheritance-a99c065e0f375b98101eec998e7a32c54dcf97c1.png.map  inheritance-a9f50503195d8f4c6abf5dfc717de9b9afcb6606.png.map  inheritance-aaaa8c971e9ac6e4d79e4a168400def6f2a02030.png.map  inheritance-ac07800b6166b1f37485eed41bef3baabedcaabf.png.map  inheritance-b31bedf8eb17a9c40b19a9d92ba93b6c3703e970.png.map  inheritance-ddb544e74afeebb686d18fb2b6d78661db3252f0.png.map  inheritance-ddeedbe3264657ec746480bd61f8bcb30676aac5.png.map  inheritance-e39c976460ad7b20aef58a087ec6b71e20be441d.png.map  (+6 more)
_sources/: glossary.rst.txt  index.rst.txt
changelog.d/: +add-refactor2towncrier.infra.rst  +alias.infra.rst  +bump-version.infra.rst  +cmd_commands.infra.rst  +deliverable-use-findtext.infra.rst  +deliverable.feature.rst  +dependabot.infra.rst  +depupdates.infra.rst  +docbuild-doc.doc.rst  +extend-design.doc.rst  +gha-install-tools.infra.rst  +gha-release.infra.rst  +gitignore-ipython.infra.rst  +issue-macro.doc.rst  +lifecycle-in-doctype.breaking.rst  +list_all_deliverables.feature.rst  +logging.bugfix.rst  +logging.feature.rst  +missing-license.infra.rst  +py.typed.infra.rst  +rename-config-app_env.infra.rst  +replace_placeholders.refactor.rst  +ruff-format.infra.rst  110.doc.rst  (+128 more)
(+1171 files in other folders)
