[build-system]
requires = [
  "setuptools>=77",
]
build-backend = "setuptools.build_meta"

[project]
name = "docbuild"
# version = "0.1.0"
description = "Building SUSE documentation"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "click>=8.1.8",
    "jinja2>=3.1.6,<4.0.0",
    "lxml>=5.4.0",
    "pydantic>=2.11.4",
    "rich>=14.0.0",
    "tomlkit>=0.13.2",
]
authors = [
  {name = "Tom Schraitle", email = "toms@suse.de"},
]
maintainers = [
  {name = "Tom Schraitle", email = "toms@suse.de"},
]
dynamic = ["version",]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha".
    # "Development Status :: 1 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[dependency-groups]
typing = [
    "pyright>=1.1.401",
]
formatting = [
    "docformatter>=1.7.5",
    "ruff>=0.11.12",
]
tests = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
changelog = [
    "towncrier>=24.8.0",
]
docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-click>=6.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphobjinv>=2.3.1.3",
]
repl = [
    "ipython>=9.3.0",
]
devel = [
  {include-group = "typing"},
  {include-group = "formatting"},
  {include-group = "tests"},
  {include-group = "changelog"},
  {include-group = "docs"},
  {include-group = "repl"},
  # {include-group = "publish"},
]


[project.scripts]
docbuild = "docbuild.cli.cli:cli"


# --- Setuptools configuration ---
[tool.setuptools]
package-dir = {"" = "src"}
package-data = { "docbuild" = ["py.typed"] }
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "docbuild.__about__.__version__"}


[tool.docformatter]
wrap-summaries = 80
close-quotes-on-newline = true
# make-summary-multi-line = true
black = true
pre-summary-newline = true
recursive = true
